wp-mysql/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wpproject
  labels: 
     app: wpweb
     type: webapp
     project: wpproject-examples
